added pie chart

--- a/PyBer.ipynb
+++ b/PyBer.ipynb
@@ -18,7 +18,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "3c01f9c3",
+   "id": "8f4a2762",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "7a385c7b",
+   "id": "0b93f845",
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +152,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "687d747f",
+   "id": "e89c144f",
    "metadata": {},
    "outputs": [
     {
@@ -285,7 +285,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "6b8c907d",
+   "id": "76973341",
    "metadata": {},
    "outputs": [
     {
@@ -310,7 +310,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "6a46ee44",
+   "id": "1fe9e107",
    "metadata": {},
    "outputs": [
     {
@@ -335,7 +335,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "c4385766",
+   "id": "35d3a14a",
    "metadata": {},
    "outputs": [
     {
@@ -360,7 +360,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "543209c3",
+   "id": "ac05d256",
    "metadata": {},
    "outputs": [
     {
@@ -382,7 +382,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "31e38b5f",
+   "id": "bc29a26e",
    "metadata": {},
    "outputs": [
     {
@@ -404,7 +404,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "961ee37c",
+   "id": "ba65fdf2",
    "metadata": {},
    "outputs": [
     {
@@ -430,7 +430,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "21717835",
+   "id": "a070a417",
    "metadata": {},
    "outputs": [
     {
@@ -456,7 +456,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "e5eb8841",
+   "id": "573c73d4",
    "metadata": {},
    "outputs": [
     {
@@ -482,7 +482,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "3690fbe2",
+   "id": "a05a362b",
    "metadata": {},
    "outputs": [
     {
@@ -596,7 +596,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "36c03cd3",
+   "id": "da5f09ef",
    "metadata": {},
    "outputs": [
     {
@@ -708,7 +708,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "692a043f",
+   "id": "6731b633",
    "metadata": {},
    "outputs": [
     {
@@ -821,7 +821,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "397027ff",
+   "id": "e111b0f3",
    "metadata": {},
    "outputs": [
     {
@@ -850,7 +850,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "0db8b143",
+   "id": "94f8cc5c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -863,7 +863,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "7473067f",
+   "id": "987aee53",
    "metadata": {},
    "outputs": [
     {
@@ -892,7 +892,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "958a1888",
+   "id": "c1af7676",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -904,7 +904,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "547a2ab2",
+   "id": "1910f422",
    "metadata": {},
    "outputs": [
     {
@@ -933,7 +933,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "57f4e8a1",
+   "id": "bbd58fe6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -945,7 +945,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "3928f4d3",
+   "id": "6ff2955b",
    "metadata": {},
    "outputs": [
     {
@@ -981,7 +981,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "67d53f41",
+   "id": "82e5cd41",
    "metadata": {},
    "outputs": [
     {
@@ -1025,7 +1025,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "4dbdc630",
+   "id": "3d8c29a9",
    "metadata": {},
    "outputs": [
     {
@@ -1069,7 +1069,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "92900aed",
+   "id": "ca64c70d",
    "metadata": {},
    "outputs": [
     {
@@ -1113,7 +1113,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "47ced34d",
+   "id": "e8a5a36a",
    "metadata": {
     "scrolled": true
    },
@@ -1182,7 +1182,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "201b859c",
+   "id": "70b56db1",
    "metadata": {},
    "outputs": [
     {
@@ -1291,7 +1291,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "f1c6a86f",
+   "id": "b7024244",
    "metadata": {},
    "outputs": [
     {
@@ -1323,7 +1323,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "f9bc38f0",
+   "id": "ebf69a12",
    "metadata": {},
    "outputs": [
     {
@@ -1345,7 +1345,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "d1261451",
+   "id": "b8c79552",
    "metadata": {},
    "outputs": [
     {
@@ -1367,7 +1367,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "82a016a1",
+   "id": "fbcde20d",
    "metadata": {},
    "outputs": [
     {
@@ -1395,7 +1395,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "be87cd07",
+   "id": "89ecfd98",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1407,7 +1407,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "3f7a62e8",
+   "id": "3f3d12db",
    "metadata": {},
    "outputs": [
     {
@@ -1435,7 +1435,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "65f5b715",
+   "id": "20d2cd2b",
    "metadata": {},
    "outputs": [
     {
@@ -1463,7 +1463,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "c8382d58",
+   "id": "2919b68c",
    "metadata": {},
    "outputs": [
     {
@@ -1491,7 +1491,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "f38d6fca",
+   "id": "586cf950",
    "metadata": {},
    "outputs": [
     {
@@ -1525,7 +1525,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "14dd180f",
+   "id": "69489aa3",
    "metadata": {},
    "outputs": [
     {
@@ -1553,7 +1553,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "0405cc12",
+   "id": "1eac6f23",
    "metadata": {},
    "outputs": [
     {
@@ -1581,7 +1581,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "a02f1e20",
+   "id": "3255fec9",
    "metadata": {},
    "outputs": [
     {
@@ -1609,7 +1609,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "4d220355",
+   "id": "fd735801",
    "metadata": {},
    "outputs": [
     {
@@ -1637,7 +1637,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "b83b08bf",
+   "id": "d61eaa05",
    "metadata": {},
    "outputs": [
     {
@@ -1665,7 +1665,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "fe9d2a22",
+   "id": "c4ba3504",
    "metadata": {},
    "outputs": [
     {
@@ -1693,7 +1693,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "9898224a",
+   "id": "f3f532fc",
    "metadata": {},
    "outputs": [
     {
@@ -1725,7 +1725,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "6f038dfe",
+   "id": "1a58add8",
    "metadata": {},
    "outputs": [
     {
@@ -1760,7 +1760,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "af555180",
+   "id": "981645fe",
    "metadata": {},
    "outputs": [
     {
@@ -1780,7 +1780,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "6624a706",
+   "id": "ce132a65",
    "metadata": {},
    "outputs": [
     {
@@ -1839,7 +1839,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "8fc39f96",
+   "id": "d448eeab",
    "metadata": {},
    "outputs": [
     {
@@ -1898,7 +1898,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "6fe0c295",
+   "id": "639250e7",
    "metadata": {},
    "outputs": [
     {
@@ -1957,7 +1957,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "8bf18ef7",
+   "id": "833c8328",
    "metadata": {},
    "outputs": [
     {
@@ -1992,7 +1992,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "81a7f31d",
+   "id": "cde448f7",
    "metadata": {},
    "outputs": [
     {
@@ -2051,7 +2051,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "703a5f9d",
+   "id": "5e5be68e",
    "metadata": {},
    "outputs": [
     {
@@ -2110,7 +2110,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "2d3b8c05",
+   "id": "cd874c10",
    "metadata": {},
    "outputs": [
     {
@@ -2169,7 +2169,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "a0cd5aa7",
+   "id": "181b236b",
    "metadata": {},
    "outputs": [
     {
@@ -2203,8 +2203,93 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 66,
+   "id": "fb159f1a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "type\n",
+       "Rural        4327.93\n",
+       "Suburban    19356.33\n",
+       "Urban       39854.38\n",
+       "Name: fare, dtype: float64"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Get the sum of the fares for each city type.\n",
+    "sum_fares_by_type = pyber_data_df.groupby([\"type\"]).sum()[\"fare\"]\n",
+    "sum_fares_by_type"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "id": "700faffe",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "63538.64"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Get the sum of all the fares.\n",
+    "total_fares = pyber_data_df[\"fare\"].sum()\n",
+    "total_fares"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "id": "7b8c0895",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "type\n",
+       "Rural        6.811493\n",
+       "Suburban    30.463872\n",
+       "Urban       62.724635\n",
+       "Name: fare, dtype: float64"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Calculate the percentage of fare for each city type.\n",
+    "type_percents = 100 * sum_fares_by_type / total_fares\n",
+    "type_percents"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "02b22456",
+   "id": "9ee2b76e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "29779ed8",
    "metadata": {},
    "outputs": [],
    "source": []
